@startuml
interface IReadOnlyVaccince {
}
interface IReadOnlyVaccineContext {
    Name : string <<get>>
    SetName(name:string) : void
}
interface IVaccineInterface {
    Id : int <<get>>
    GetName() : string
}
class Vaccine {
    + Name : string
    + Id : int
    + ReleaseDate : DateTime
    - Id : int <<get>>
    + Vaccine(name:string, id:int, releaseDate:DateTime)
    + GetName() : string
    + SetName(name:string) : void
    + <<override>> ToString() : string
}
IReadOnlyVaccince <|-- Vaccine
IVaccineInterface <|-- Vaccine
@enduml
